<resources>
    <string name="app_name" translatable="false">Notificatorro!</string>
    <string name="text_Header">Remind me about...</string>
    <string name="notification_Title">Title</string>
    <string name="text_Count" translatable="false">ID:</string>
    <string name="text_Count_Default">Create notification first.</string>
    <string name="notification_Created">Done!</string>
    <string name="title_activity_history">History</string>
    <string name="text_History_Cleared">History cleared</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dev_Version" translatable="false">2.3-hotfix</string>
    <string name="dev_Email" translatable="false">contactwithdmitry@gmail.com</string>
    <string name="ui_AdditionalSettings">More</string>
    <string name="action_New_Note">Create note</string>
    <string name="action_History">History</string>
    <string name="action_About" translatable="false">About</string>
    <string name="action_Settings">Settings</string>
    <string name="notification_Text">Note text</string>
    <string name="template_Empty_Text">No text.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_SetDelay">Delayed</string>
    <string name="action_SetSilent">Silent</string>
    <string name="silent_Enable">History disabled.</string>
    <string name="silent_Disable">History enabled.</string>
    <string name="dialog_History_Clear_Title">Confirmation</string>
    <string name="dialog_History_Clear_Message">Are you sure want to clear your history?</string>
    <string name="dialog_Positive_Yes">Yes</string>
    <string name="dialog_Negative_No">No</string>
    <string name="notification_Title_Default">Note:</string>
    <string name="settings_Vibration">Enable vibration</string>
    <string name="dialog_Delay_Disable">Delay disabled</string>
    <string name="action_SetDelay_Success">Notification delayed for</string>
    <string name="prompt_Delay_Title">Delay in minutes:</string>
    <string name="action_New_Note_Empty">Won\'t create empty note</string>
    <string name="title_activity_about" translatable="false">About</string>
    <string name="text_About_Title">Thank you!</string>
    <string name="text_About_Text">I made this app with love. This is my first app I\'ve ever created for Android. This means I learn on this app. If you want to donate, please check credentials on project\'s GitHub main page by tapping on coffee cup above. You can also find todo list and source code for this app. App is shared under GNU GPLv3 license, which means that you can modify and share your version of app with your sources attached. Also you have to reffer to an author (me) by including link to project\'s GitHub page. To find out more please read LICENSE file inside project\'s page.\n\nStay awesome!\n</string>
    <string name="text_About_Coffee_GitHubPage">GitHub page</string>
    <string name="text_About_Coffee_Mailme">Mail to me</string>
    <string name="ui_SendEmail">Send mail with</string>
    <string name="ui_OpenPage">Open page with</string>
    <string name="settings_Reset_Silent">Silent only one note</string>
    <string name="silent_Enable_Once">This one won\'t be listed in history.</string>
    <string name="settings_Reset_Delay">Delay only one note</string>
    <string name="action_SetDelay_Success_Postfix">minutes</string>
    <string name="settings_Alt_Notifications">Use alternative in-app notifications</string>
    <string name="settings_Apply_Success">Settings saved.</string>
    <string name="settings_Ignore_Title">Create new note directly from text</string>
    <string name="ui_Toggle_Persistent">Toggle persistent</string>
    <string name="ui_Note_Quick">Quick Note</string>
    <string name="notification_Title_Quicknote">Quicknote:</string>
    <string name="prompt_Quicknote_Title">Check text:</string>
    <string name="prompt_Quicknote_Text_Empty">No text in clipboard.</string>
    <string name="settings_Separator_Creation">Creating notes:</string>
    <string name="settings_Separator_Quicknote">Quicknotes (hold \'Create\' button):</string>
    <string name="settings_Quicknote_Prompt">Prompt for confirmation</string>
    <string name="settings_Quicknote_Silent">Disable history</string>
    <string name="history_Empty">Empty history</string>
    <string name="action_Persist">Pinned</string>
    <string name="persist_Toggle_Short">Toggle</string>
    <string name="persist_Toggle">Toggle pinned</string>
    <string name="persist_Toggle_Toggled">Toggled visibility</string>
    <string name="persist_Title_Default">Pinned:</string>
    <string name="persist_Text_Default">No text</string>
    <string name="text_Persist_Title">Keep in mind...</string>
    <string name="settings_Separator_Pinned">Pinned notification:</string>
    <string name="settings_Pinned_Showicon">Show icon in statusbar</string>
    <string name="settings_Pinned_Prior">Make notification highest priority</string>
    <string name="notification_Delayed_Title_Default">min delayed:</string>
    <string name="prompt_Repeating">Repeat until clicked</string>
    <string name="notification_Title_Repeating">min repeating:</string>
    <string name="settings_Separator_Delayed">Delayed notifications</string>
    <string name="settings_Delayed_Crazyvibration">Crazy vibration!</string>
</resources>
