<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <!--<item-->
            <!--android:id="@+id/nav_NewNote"-->
            <!--android:icon="@drawable/plus"-->
            <!--android:title="@string/action_New_Note" />-->

        <item
            android:id="@+id/nav_Persist"
            android:icon="@drawable/persist"
            android:title="@string/action_Persist" />

        <item
            android:id="@+id/nav_History"
            android:icon="@drawable/history"
            android:title="@string/action_History" />
    </group>

    <item android:title="@string/ui_AdditionalSettings">
        <menu>
            <item
                android:id="@+id/nav_Settings"
                android:icon="@drawable/settings"
                android:title="@string/action_Settings" />

            <item
                android:id="@+id/nav_About"
                android:icon="@drawable/about"
                android:title="@string/action_About" />
        </menu>
    </item>

</menu>
