<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cake.notificator.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:minHeight="40dp"
            android:gravity="center_vertical"

            android:id="@+id/text_Settings_Creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/switch_Vibration"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/switch_Vibration"
            android:text="@string/settings_Separator_Creation" />

    <Switch
        android:minHeight="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:id="@+id/switch_Vibration"
        android:layout_below="@id/text_Settings_Creation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/settings_Vibration" />

    <Switch
        android:minHeight="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:id="@+id/switch_Reset_Silent"
        android:layout_below="@+id/switch_Vibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/settings_Reset_Silent"/>

    <Switch
        android:minHeight="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:id="@+id/switch_Reset_Delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_Reset_Delay"
        android:layout_below="@+id/switch_Reset_Silent" />

    <Switch
        android:minHeight="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:id="@+id/switch_Alt_Notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_Alt_Notifications"
        android:layout_below="@+id/switch_Reset_Delay" />

    <Switch
        android:minHeight="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:id="@+id/switch_Ignore_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_Ignore_Title"
        android:layout_below="@+id/switch_Alt_Notifications" />

        <TextView
            android:minHeight="40dp"
            android:gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:layout_below="@id/switch_Ignore_Title"

            android:id="@+id/text_Settings_Quicknotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/switch_Vibration"
            android:layout_alignStart="@+id/switch_Vibration"
            android:text="@string/settings_Separator_Quicknote" />

        <Switch
            android:minHeight="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:id="@+id/switch_Quicknote_Prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_Quicknote_Prompt"
            android:layout_below="@+id/text_Settings_Quicknotes" />

        <Switch
            android:minHeight="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:id="@+id/switch_Quicknote_Silent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_Quicknote_Silent"
            android:layout_below="@+id/switch_Quicknote_Prompt" />

        <TextView
            android:minHeight="40dp"
            android:gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:layout_below="@id/switch_Quicknote_Silent"

            android:id="@+id/text_Settings_Pinned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/switch_Vibration"
            android:layout_alignStart="@+id/switch_Vibration"
            android:text="@string/settings_Separator_Pinned" />

        <Switch
            android:minHeight="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:id="@+id/switch_Persist_Prior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_Pinned_Prior"
            android:layout_below="@+id/text_Settings_Pinned" />

    </RelativeLayout>

</ScrollView>
