<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cake.notificator.MainActivity">


    <TextView
        style="@style/text_Header_Style"

        android:id="@+id/textView_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/text_Header" />

    <EditText
        android:id="@+id/editText_Title"

        style="@style/text_Input_Style.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/notification_Title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText"
        style="@style/text_Input_Style"
        android:layout_width="match_parent"
        android:hint="@string/notification_Text"

        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="3" />

    <Button
        android:onClick="onClick_Notify"

        android:layout_toStartOf="@+id/button_SetSilent"
        android:layout_toLeftOf="@+id/button_SetDelay"
        android:layout_toRightOf="@+id/button_SetSilent"
        android:layout_toEndOf="@+id/button_SetDelay"
        android:id="@+id/button_Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/action_New_Note" />

    <Button
        android:onClick="onClick_SetDelay"
        android:background="@android:color/transparent"

        android:id="@+id/button_SetDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button_Create"
        android:text="@string/action_SetDelay" />

    <Button
        android:onClick="onClick_Notify_Silent"
        android:background="@android:color/transparent"

        android:id="@+id/button_SetSilent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_Create"
        android:text="@string/action_SetSilent" />

    <!--<ImageButton-->
        <!--android:background="?android:selectableItemBackground"-->
        <!--android:onClick="onClick_Notify"-->
        <!--android:src="@drawable/doit"-->
        <!--android:maxHeight="25mm"-->
        <!--android:scaleType="fitCenter"-->
        <!--android:adjustViewBounds="true"-->

        <!--android:id="@+id/imageButton_Putin"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true" />-->

    <FrameLayout
        android:layout_centerInParent="true"
        android:id="@+id/fragment_Delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>

</RelativeLayout>
